# GestureSolver

./: .gitignore  CMakeLists.txt  README.md  build.gradle  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
libs/: kircherelectronics-sensorexplorer.aar
src/main/c++/com/github/mleenings/gesture/solver/dsp/: Dtw-native-lib.cpp
src/main/include/com/github/mleenings/gesture/solver/aquila-dsp/: Dtw-native-lib.h
src/main/java/com/github/mleenings/gesture/solver/: GestureRecognition.java  GestureRecognitionException.java  MotionSensorScannner.java
src/main/java/com/github/mleenings/gesture/solver/classifier/: CentroidClassifier.java  Classifier.java  ClassifierBase.java  KnnClassifier.java  KnnSubsetClassifier.java  PreGestureClassification.java  StandClassifier.java
src/main/java/com/github/mleenings/gesture/solver/classifier/util/: ClassificationUtility.java  DBA.java
src/main/java/com/github/mleenings/gesture/solver/classifier/util/hca/: HCA.java  HCANode.java
src/main/java/com/github/mleenings/gesture/solver/dao/: CalibrationSensorDAO.java  DAO.java  PreGestureClassificationDataDAO.java  ProjectDAOException.java
src/main/java/com/github/mleenings/gesture/solver/data/objects/sensor/: CalibrationData.java  Gesture.java  GestureInfo.java  PreGestureClassificationData.java  PreGestureClassificationDataForGesture.java  SensorData.java  SensorMotionData.java  StatisticSensorData.java
src/main/java/com/github/mleenings/gesture/solver/filter/: ButterworthFilter.java  ButterworthFilterGyroscope.java  KalmanFilterAccelerometer.java  KalmanFilterGyroscope.java  MagneticLowPassFilter.java  MeanFilter.java  MeanOrientationFilter.java  OrientationLowPassFilter.java  SensorFilter.java  SimpleLowPassFilter.java  ZeroFilter.java
src/main/java/com/github/mleenings/gesture/solver/filter/hardware/acceleration/: ImuLaKfQuaternion.java  ImuLinearAccelerationInterface.java
src/main/java/com/github/mleenings/gesture/solver/filter/hardware/gyroscope/: ImuOCfQuaternion.java  MeanFilterSmoothing.java  Orientation.java  OrientationInterface.java
src/main/java/com/github/mleenings/gesture/solver/filter/hardware/kalman/: RotationKalmanFilter.java  RotationMeasurementModel.java  RotationProcessModel.java
src/main/java/com/github/mleenings/gesture/solver/gesturizer/: AcceleromationDerivationCalculation.java  CalibrationCalculation.java  GestureRecognition.java  GestureSensorEventListener.java  OrientationCalculation.java
src/main/java/com/github/mleenings/gesture/solver/hardware/: Sensor.java  SensorEvent.java  SensorEventListener.java  SensorManager.java
src/main/java/com/github/mleenings/gesture/solver/javaml/: Dtw.java
src/main/java/com/github/mleenings/gesture/solver/util/: ObjectCloner.java
